# GTAFive-Menu

./: .gitignore  CMakeLists.txt  vcpkg.json
scripts/: gtav-classes.cmake  json.cmake  zydis.cmake
src/: renderer.cpp  version.cpp
src/views/debug/: view_debug_globals.cpp  view_debug_script_events.cpp
